Correctif pour aligner arrow

--- a/style.css
+++ b/style.css
@@ -898,7 +898,7 @@ margin-left: 93%;
 .arrowdown {
   position: absolute;
   top:80%;
-  left: 47%;
+  left: 48%;
   margin-left:-20px;
   max-width:6%;
 
